--- a/Mtcars.html
+++ b/Mtcars.html
@@ -370,6 +370,15 @@ pre code {
 </div>
 
 
+<div id="verificando-a-correlação-entre-as-variáveis" class="section level2">
+<h2>Verificando a correlação entre as variáveis</h2>
+<div id="em-primeira-análise-hp-está-correlacionada-com-mpg-cyl-disp-qsec-vs-carb" class="section level3">
+<h3>Em primeira análise hp está correlacionada com: mpg, cyl, disp,
+qsec, vs, carb</h3>
+</div>
+<div id="eu-reparei-diversos-problemas-de-multicolinearidade-entre-as-variáveis-explicativas" class="section level3">
+<h3>Eu reparei diversos problemas de multicolinearidade entre as
+variáveis explicativas</h3>
 <pre class="r"><code>df = data.frame(mtcars)
 cor(df)</code></pre>
 <pre><code>##             mpg        cyl       disp         hp        drat         wt
@@ -396,6 +405,12 @@ cor(df)</code></pre>
 ## am   -0.22986086  0.1683451  1.00000000  0.7940588  0.05753435
 ## gear -0.21268223  0.2060233  0.79405876  1.0000000  0.27407284
 ## carb -0.65624923 -0.5696071  0.05753435  0.2740728  1.00000000</code></pre>
+</div>
+</div>
+<div id="modelo-linear-por-todas-as-variáveis" class="section level2">
+<h2>Modelo linear por todas as variáveis</h2>
+<div id="apenas-disp-e-carb-influenciam-no-modelo-em-0.8565" class="section level3">
+<h3>Apenas disp e carb influenciam no modelo em 0.8565</h3>
 <pre class="r"><code>mod = lm(hp ~ ., data=df)
 summary(mod)</code></pre>
 <pre><code>## 
@@ -425,6 +440,10 @@ summary(mod)</code></pre>
 ## Residual standard error: 25.97 on 21 degrees of freedom
 ## Multiple R-squared:  0.9028, Adjusted R-squared:  0.8565 
 ## F-statistic:  19.5 on 10 and 21 DF,  p-value: 1.898e-08</code></pre>
+</div>
+<div id="repare-que-incluindo-o-wt-hp-disp-wt-carb-o-modelo-melhora-0.8742" class="section level3">
+<h3>Repare que incluindo o wt (hp ~ disp + wt + carb) o modelo melhora
+(0.8742)</h3>
 <pre class="r"><code>mod2=step(mod, direction = &quot;backward&quot;)</code></pre>
 <pre><code>## Start:  AIC=216.97
 ## hp ~ mpg + cyl + disp + drat + wt + qsec + vs + am + gear + carb
@@ -546,6 +565,10 @@ summary(mod)</code></pre>
 ## Residual standard error: 24.32 on 28 degrees of freedom
 ## Multiple R-squared:  0.8863, Adjusted R-squared:  0.8742 
 ## F-statistic: 72.78 on 3 and 28 DF,  p-value: 2.462e-13</code></pre>
+</div>
+<div id="vamos-seguir-com-este-modelo-agora-é-ver-se-os-pressupostos-estão-sendo-atendidos" class="section level3">
+<h3>Vamos seguir com este modelo, agora é ver se os pressupostos estão
+sendo atendidos</h3>
 <pre class="r"><code>mod = lm(formula = hp ~ disp + wt + carb, data = df)
 summary(mod)</code></pre>
 <pre><code>## 
@@ -568,6 +591,10 @@ summary(mod)</code></pre>
 ## Residual standard error: 24.32 on 28 degrees of freedom
 ## Multiple R-squared:  0.8863, Adjusted R-squared:  0.8742 
 ## F-statistic: 72.78 on 3 and 28 DF,  p-value: 2.462e-13</code></pre>
+</div>
+</div>
+<div id="teste-de-normalidade" class="section level2">
+<h2>Teste de normalidade</h2>
 <div id="por-análise-visual-a-normalidade-dos-resíduos-parece-ser-satisfatória." class="section level3">
 <h3>Por análise visual, a normalidade dos resíduos parece ser
 satisfatória.</h3>
@@ -586,6 +613,9 @@ ad.test(anares)</code></pre>
 ## data:  anares
 ## A = 0.43125, p-value = 0.288</code></pre>
 </div>
+</div>
+<div id="teste-de-homocedasticidade" class="section level2">
+<h2>Teste de homocedasticidade</h2>
 <div id="por-avaliação-visual-o-modelo-atender-ao-pressuposto-da-homocedásticidade" class="section level3">
 <h3>Por avaliação visual, o modelo atender ao pressuposto da
 homocedásticidade</h3>
@@ -610,6 +640,9 @@ bptest(mod)</code></pre>
 ## data:  mod
 ## BP = 6.3366, df = 3, p-value = 0.09634</code></pre>
 </div>
+</div>
+<div id="teste-de-autocorrelação" class="section level2">
+<h2>Teste de autocorrelação</h2>
 <div id="o-teste-formal-de-autocorrelação-durbin-watson-03739-maior-que-5-indica-que-o-pressuposto-de-autocorrelação-foi-atendido" class="section level3">
 <h3>O teste formal de autocorrelação (Durbin-Watson) 0,3739 maior que 5%
 indica que o pressuposto de autocorrelação foi atendido</h3>
@@ -620,10 +653,14 @@ indica que o pressuposto de autocorrelação foi atendido</h3>
 ## data:  mod
 ## DW = 1.9832, p-value = 0.3739
 ## alternative hypothesis: true autocorrelation is greater than 0</code></pre>
+</div>
+<div id="até-aqui-o-modelo-parece-válido" class="section level3">
+<h3>Até aqui o modelo parece válido</h3>
 <pre class="r"><code>pred_in = data.frame(disp = 159.0, wt = 2.220, carb = 3)
 predict(mod, pred_in, interval=&quot;confidence&quot;)</code></pre>
 <pre><code>##        fit     lwr      upr
 ## 1 142.5679 127.453 157.6827</code></pre>
+</div>
 </div>
 
 
