Ajuste final Canada

--- a/Canada.html
+++ b/Canada.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Americo Freitas" />
+<meta name="author" content="Grupo: Americo Freitas, Arleks dos Santos e Luciano Ozorio" />
 
 <meta name="date" content="2022-05-04" />
 
@@ -364,7 +364,8 @@ pre code {
 
 
 <h1 class="title toc-ignore">Canada</h1>
-<h4 class="author">Americo Freitas</h4>
+<h4 class="author">Grupo: Americo Freitas, Arleks dos Santos e Luciano
+Ozorio</h4>
 <h4 class="date">2022-05-04</h4>
 
 </div>
